@@ -78,7 +78,14 @@ class DefaultDialect(base.Dialect):
                 "The %s dialect is not yet ported to SQLAlchemy 0.6" % self.name)
         
         self.convert_unicode = convert_unicode
-        self.assert_unicode = assert_unicode
+        if assert_unicode:
+            util.warn_deprecated("assert_unicode is deprecated. "
+                                "SQLAlchemy emits a warning in all cases where it "
+                                "would otherwise like to encode a Python unicode object "
+                                "into a specific encoding but a plain bytestring is received. "
+                                "This does *not* apply to DBAPIs that coerce Unicode natively."
+                                )
+            
         self.encoding = encoding
         self.positional = False
         self._ischema = None
